feat: add mobile-hide-in-pwa class to hide elements in standalone mode

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@media all and (display-mode: standalone) {
+  .mobile-hide-in-pwa {
+    display: none
+  }
+}
